Add changes to support u2