@@ -143,8 +143,15 @@ ls $INT_TEST_MODULE_DIR
 
 if [[ "$PRODUCT_VERSION" != *"SNAPSHOT"* ]]; then
     cd $TESTGRID_DIR/$PRODUCT_REPOSITORY_NAME
+    echo $JAVA_HOME
+    if [[ "$PRODUCT_REPOSITORY_BRANCH" == *"support"* ]]; then
+        log_info "Add WSO2 repository to pom.xml"
+        cp $TESTGRID_DIR/$PRODUCT_REPOSITORY_NAME/add-patch-repository.sh $TESTGRID_DIR/$PRODUCT_REPOSITORY_NAME/
+        cp $TESTGRID_DIR/$PRODUCT_REPOSITORY_NAME/add_u2.xml $TESTGRID_DIR/$PRODUCT_REPOSITORY_NAME/
+        chmod +x $TESTGRID_DIR/$PRODUCT_REPOSITORY_NAME/add-patch-repository.sh
+        bash $TESTGRID_DIR/$PRODUCT_REPOSITORY_NAME/add-patch-repository.sh
+    fi
     log_info "Running Maven clean install"
-    export MAVEN_OPTS="--add-opens java.base/java.net=ALL-UNNAMED --add-opens java.base/java.lang.reflect=ALL-UNNAMED"
     echo $JAVA_HOME
     mvn clean install -Dmaven.test.skip=true
     echo "Copying pack to target"
